<resources>
    <string name="app_name">Chefster</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Login</string>
    <string name="client_id">265724200627-n8b6duii1at2gipef6db4mba5l74afqr.apps.googleusercontent.com</string>
    <string name="facebook_app_id">172246319912350</string>
    <string name="fb_login_protocol_scheme">fb172246319912350</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="auth_failed">Authenticaiton Failed</string>
    <string name="well_done">Well Done!</string>
    <string name="share_meal">Share your meal with other cooking lovers!</string>
    <string name="share">Share</string>
    <string name="pots">Pots</string>
    <string name="pans">Pans</string>
    <string name="stove">Stove</string>
    <string name="oven">Oven</string>
    <string name="lets_go">Lets Go. I\'m Ready!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="how_many_people">How many people are cooking?</string>
    <string name="regular_time_calc">Est. time without Chefster</string>
    <string name="app_time_calc">Est. time with Chefster</string>
    <string name="what_tools">What tools do you have?</string>

    <string-array name="amount_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_dish_list">DishListActivity</string>
    <string name="finished_steps">Meals In Progress</string>
    <string name="finish_cooking">Finish Cooking!</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="ingredients">ingredients</string>
    <string name="reviews">reviews</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="finish_cooking_message">Amazing! Want to share your beautiful meal with your friends?</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="steps">steps</string>
    <string name="incorrect_input">Please fill in all required fields</string>
    <string name="added">Added</string>
    <string name="add_to_menu">Add to Menu</string>
    <string name="leave_review">Leave a review!</string>
    <string name="review_hint">Did you like the dish? Would you make it again? Let other people know!</string>
    <string name="post_review">Post Review</string>
    <string name="tools_needed">Tools needed:</string>
    <string name="meal_summary">Meal Summary</string>
    <string name="tools_warning">* You currently do not have the right tool set for an optimized cooking time</string>
    <string name="future">Future</string>
    <string name="done">Done</string>
    <string name="active">Active</string>
    <string name="finish_step_message"> Are you done with this step? or just moving on?</string>
    <string name="whats_cooking">What\'s Cookin\'?</string>
    <string name="empty_dishes_list">Add dishes to menu!</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="speech_prompt">Say yes to use voice guidance, no to stop.</string>
    <string name="a_question">A question for you before we start…</string>
    <string name="ok">OK</string>
    <string name="skip">SKIP</string>
    <string name="shooping_list">Shopping List</string>
    <string name="tools_you_are_using">Tools you are using:</string>

    <string name="app_icon_content_description">app icon</string>
    <string name="email_hint">user@gmail.com</string>
    <string name="signup_text">Don\'t have an account yet? Sign Up.</string>
    <string name="login_button_text">Email Login</string>
    <string name="or">OR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="snackbar_text">Please SignOut and SignIn To See Changes</string>
    <string name="fb_login">Facebook Login</string>
    <string name="moving_on">Next Step</string>
    <string name="home">Go Home</string>
    <string name="share_all">Share All</string>
    <string name="number_of_people_cooking">Number of people cooking:</string>
    <string name="cheffie">Cheffie</string>
    <string name="next_step">Next Step</string>

    <plurals name="people">
        <item quantity="one">person</item>
        <item quantity="other">people</item>
    </plurals>

    <plurals name="pans">
        <item quantity="one">pan</item>
        <item quantity="other">pans</item>
    </plurals>

    <plurals name="pots">
        <item quantity="one">pot</item>
        <item quantity="other">pots</item>
    </plurals>

</resources>
