<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_medium"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.codepath.chefster.fragments.MealLaunchSettingsFragment"
    >

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        apps:cardElevation="2dp"
        apps:cardCornerRadius="4dp"
        android:layout_marginBottom="12dp"
        >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="@string/some_questions"
                android:background="@android:color/black"
                />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        apps:cardElevation="2dp"
        apps:cardCornerRadius="4dp"
        android:layout_marginBottom="6dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="6dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/orange_super_dark"
                android:textStyle="bold"
                android:text="@string/what_tools"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <Spinner
                    android:id="@+id/pans_spinner"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/orange_medium"
                    />

                <TextView
                    android:id="@+id/text_view_pans_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/pans"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/orange_medium"
                    />

                <Spinner
                    android:id="@+id/pots_spinner"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/orange_medium"
                    />

                <TextView
                    android:id="@+id/text_view_pots_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pots"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/orange_medium"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        apps:cardElevation="2dp"
        apps:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="6dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/orange_super_dark"
                android:textStyle="bold"
                android:text="@string/how_many_people"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/text_view_person"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="4dp"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/one"
                    />

                <TextView
                    android:id="@+id/text_view_persons"
                    android:layout_width="80dp"
                    android:layout_height="70dp"
                    android:drawableStart="@drawable/ic_persons"
                    android:drawablePadding="8dp"
                    android:padding="4dp"
                    android:paddingStart="12dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/two"
                    />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/button_ok"
        apps:cardElevation="2dp"
        apps:cardCornerRadius="4dp"
        android:layout_marginBottom="6dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/ok"
            android:background="@color/black"
            />

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_tools"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>
