<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:titleTextColor="#fff" />

    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:id="@+id/linear_layout_main_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        tools:context="com.codepath.chefster.activities.ProgressActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/light_blue_translucent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/active" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white_translucent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/future" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/light_orange_translucent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/done" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horiz_scroll_view_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linear_layout_dish_progress_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:divider="@drawable/horiz_transparent_divider"
                android:orientation="horizontal"
                android:showDividers="middle" />

        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/horiz_scroll_view_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/linear_layout_dish_progress_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:divider="@drawable/horiz_transparent_divider"
                android:orientation="horizontal"
                android:showDividers="middle" />

        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/horiz_scroll_view_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/linear_layout_dish_progress_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:divider="@drawable/horiz_transparent_divider"
                android:orientation="horizontal"
                android:showDividers="middle" />

        </HorizontalScrollView>

    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/button_finish_cooking"-->
        <!--style="@style/start_cooking_sticky_button"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:text="@string/finish_cooking"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="24sp"-->
        <!--android:textStyle="bold" />-->

</RelativeLayout>
